# tiny-clean

./: Cargo.toml  README.md
.github/workflows/: coverage.yml  publish.yml  rust.yml
benches/: encode_benchmarks.rs
benches/data/: benchmark-data-2.txt  info.md
src/: common.rs  encoder.rs  java_script_encoder.rs  java_script_encoder_v2.rs  lib.rs  uri_encoder.rs  xml_encoder.rs
